added the best checkbox

--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
                     <span>Volume</span> <input type="range">
                </div>
 
-               <div class="column key-checkbox">
-                    <span>Show Keys</span> <input type="checkbox">
+               <div class="column keys-checkbox">
+                    <span>Show Keys</span> <input type="checkbox" checked>
                </div>
           </header>
 
           <ul class="piano-keys">
-               <li class="key black"><span>a</span></li>
+               <li class="key white"><span>a</span></li>
                <li class="key black"><span>w</span></li>
-               <li class="key black"><span>s</span></li>
+               <li class="key white"><span>s</span></li>
                <li class="key black"><span>e</span></li>
-               <li class="key black"><span>d</span></li>
+               <li class="keywhitek"><span>d</span></li>
                <li class="key black"><span>f</span></li>
-               <li class="key black"><span>t</span></li>
+               <li class="key white"><span>t</span></li>
                <li class="key black"><span>g</span></li>
-               <li class="key black"><span>y</span></li>
+               <li class="key white"><span>y</span></li>
                <li class="key black"><span>h</span></li>
-               <li class="key black"><span>u</span></li>
+               <li class="key white"><span>u</span></li>
                <li class="key black"><span>j</span></li>
-               <li class="key black"><span>k</span></li>
+               <li class="key white"><span>k</span></li>
                <li class="key black"><span>o</span></li>
-               <li class="key black"><span>L</span></li>
+               <li class="key white"><span>L</span></li>
                <li class="key black"><span>P</span></li>
-               <li class="key black"><span>;</span></li>
+               <li class="key white"><span>;</span></li>
                
           </ul>
      </div>
