added the audio

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                <h2>Playable piano</h2>
                <div class="column volume-slider">
 
-                    <span>Volume</span> <input type="range">
+                    <span>Volume</span> <input type="range" min="0" max="1" value="0.5" step="any">
                </div>
 
                <div class="column keys-checkbox">
