some error fixed

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                <li class="key black"data-key ='j'><span>j</span></li>
                <li class="key white"data-key ='k'><span>k</span></li>
                <li class="key black"data-key ='o'><span>o</span></li>
-               <li class="key white"data-key ='L'><span>L</span></li>
-               <li class="key black"data-key ='P'><span>P</span></li>
+               <li class="key white"data-key ='l`'><span>L</span></li>
+               <li class="key black"data-key ='p'><span>P</span></li>
                <li class="key white" data-key =';'><span>;</span></li>
                
           </ul>
